--- a/EleveSample/Views/EleveSampleView.xaml
+++ b/EleveSample/Views/EleveSampleView.xaml
@@ -22,6 +22,7 @@
             <RowDefinition Height="50" />
             <RowDefinition Height="auto" />
             <RowDefinition />
+            <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
         <Grid>
             <Grid.ColumnDefinitions>
@@ -80,6 +81,27 @@
                     </i:EventTrigger>
                 </i:Interaction.Triggers>
             </Button>
+        </StackPanel>
+        <StackPanel Grid.Row="4" Orientation="Horizontal" Margin="10">
+            <TextBox Name="ComputeA" Width="60" >
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="TextChanged">
+                        <ev:Execute Action="Compute" Cache="True" />
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
+            </TextBox>
+            <TextBlock Text="+" Margin="5 0 5 0" />
+            <TextBox Name="ComputeB" Width="60" >
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="TextChanged">
+                        <ev:Execute Action="Compute" Cache="True" />
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
+            </TextBox>
+            <TextBlock Text="=" Margin="5 0 5 0" />
+            <Border BorderBrush="Gray" BorderThickness="0.7" Width="60">
+                <TextBlock Name="ComputeResult"  />
+            </Border>
         </StackPanel>
     </Grid>
 </ev:ViewBase>
