--- a/Eleve.ProjectTemplate/App.xaml
+++ b/Eleve.ProjectTemplate/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="Eleve.ProjectTemplate.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="Views\ProjectNameView.xaml">
+             StartupUri="Views\ToolNameView.xaml">
     <Application.Resources>
          
     </Application.Resources>
