--- a/EleveSample/Views/EleveSampleView.xaml
+++ b/EleveSample/Views/EleveSampleView.xaml
@@ -1,4 +1,4 @@
-﻿<ev:ViewBase x:Class="EleveSample.EleveSampleView"
+﻿<ev:ViewBase x:Class="EleveSample.Views.EleveSampleView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
