--- a/EleveSample/Views/EleveSampleView.xaml
+++ b/EleveSample/Views/EleveSampleView.xaml
@@ -119,6 +119,13 @@
                     </i:EventTrigger>
                 </i:Interaction.Triggers>
             </Button>
+            <Button Content="OpenAsync" FontSize="9" Width="50" Height="50" Margin="10">
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="Click">
+                        <ev:Execute Action="OpenItemSelectorAsync" />
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
+            </Button>
             <Button Content="ERROR" Width="50" Height="50" Margin="10">
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="Click">
