--- a/EleveSample/Views/EleveSampleView.xaml
+++ b/EleveSample/Views/EleveSampleView.xaml
@@ -14,6 +14,9 @@
         <i:EventTrigger EventName="ContentRendered">
             <ev:Execute Action="Initialize" />
         </i:EventTrigger>
+        <i:EventTrigger EventName="Activated">
+            <ev:Execute Action="Activated" />
+        </i:EventTrigger>
         <i:EventTrigger EventName="Closing">
             <ev:Execute Action="Closing" />
         </i:EventTrigger>
