--- a/TweetWPF/TweetWPF/Views/TweetWPFView.xaml
+++ b/TweetWPF/TweetWPF/Views/TweetWPFView.xaml
@@ -23,8 +23,6 @@
         </i:EventTrigger>
     </i:Interaction.Triggers>
 
-
-
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
@@ -49,35 +47,28 @@
                 </i:Interaction.Triggers>
             </Button>
         </Grid>
-        <StackPanel Grid.Row="1" Orientation="Horizontal">
-            <Button Content=" Home "  >
-                <i:Interaction.Triggers>
-                    <i:EventTrigger EventName="Click">
-                        <ev:Execute Action="ShowHome" />
-                    </i:EventTrigger>
-                </i:Interaction.Triggers>
-            </Button>
-            <Button Content=" Mention " />
-        </StackPanel>
+        <TabControl Grid.Row="1" ItemsSource="{Binding Tabs}" SelectedValue="{Binding SelectedTabHeader}" Visibility="{Binding TabVisibility}" Height="23" Margin="2 0 0 0">
+            <i:Interaction.Triggers>
+                <i:EventTrigger EventName="SelectionChanged">
+                    <ev:Execute Action="ShowHome" />
+                </i:EventTrigger>
+            </i:Interaction.Triggers>
+            <TabControl.ItemTemplate>
+                <DataTemplate>
+                    <Border>
+                        <TextBlock Text="{Binding}"/>
+                        <i:Interaction.Triggers>
+                            <i:EventTrigger EventName="MouseLeftButtonUp">
+                                <ev:Execute Action="ShowHome" />
+                            </i:EventTrigger>
+                        </i:Interaction.Triggers>
+                    </Border>
+                </DataTemplate>
+            </TabControl.ItemTemplate>
+        </TabControl>
         <ContentControl Grid.Row="2" Name="Container">
         </ContentControl>
-        <!--
-        <TabControl Grid.Row="2" SelectedValue="{Binding SelectedTabHeader, Converter={StaticResource SelectedTabItemConverter}}">
-            <TabItem Header="Home" Height="30">
-                <ctrl:TimelineView ItemsSource="{Binding Tweets}" SelectedItem="{Binding SelectedTweet, Mode=TwoWay}" >
-                    <i:Interaction.Triggers>
-                        <i:EventTrigger EventName="MouseDoubleClick">
-                            <ev:Execute Action="ShowDetail" />
-                        </i:EventTrigger>
-                    </i:Interaction.Triggers>
-                </ctrl:TimelineView>
-            </TabItem>
-            <TabItem Header="Mention" Height="30">
-                <ctrl:TimelineView ItemsSource="{Binding Mentions}" SelectedItem="{Binding SelectedTweet, Mode=TwoWay}" />
-            </TabItem>
-        </TabControl>
-        -->
-        <Button Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Top" Width="43" Height="30"  Margin="0 2 0 0" 
+        <Button Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Top" Width="43" Height="25"  Margin="0 2 0 0" 
                 Content="Reload" IsEnabled="{Binding IsReloadEnabled}">
             <i:Interaction.Triggers>
                 <i:EventTrigger EventName="Click">
